@@ -2,7 +2,9 @@ This is a development build of the ARA Library 2.2.
 === PRELIMINARY - DO NOT USE FOR SHIPPING PRODUCTS! ===
 
 Changes since previous releases:
-- no changes yet
+- implementation of assertion macros changed to be consistent void expressions
+  Code like "if (ARA_some_assert (someCall ()))" breaks when disabling asserts,
+  so this change makes it impossible to write it.
 
 
 === ARA SDK 2.1 release (aka 2.1.001) (2022/01/06) ===
